--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </style>
 <body class="container">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-<script src="http://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.3.10/seedrandom.min.js"></script>
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.3.10/seedrandom.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="./rainbowvis.js"></script>
 
 <br>
