--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
     <label>Random Seed</label>
     <input type="number" class="form-control" id="seed"s step="1" value="1">
   </div>
+  <div class="col-xs-3">
+  </div>
 </div>
 <br>
 <button type="button" class="btn btn-primary" onclick="start_sample();">Make Sample</button> <br>
